--- a/app/src/main/res/layout/activity_my_courses.xml
+++ b/app/src/main/res/layout/activity_my_courses.xml
@@ -4,6 +4,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.example.mniez.myapplication.MyCoursesActivity">
+tools:context="com.example.mniez.myapplication.AllCoursesActivity">
 
 </android.support.constraint.ConstraintLayout>
