--- a/app/src/main/res/layout/content_course.xml
+++ b/app/src/main/res/layout/content_course.xml
@@ -8,9 +8,23 @@
     tools:context="com.example.mniez.myapplication.CourseActivity"
     tools:showIn="@layout/activity_course">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+
+    <android.support.design.widget.TabLayout
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp" >
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tab1" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tab2" />
+    </android.support.design.widget.TabLayout>
 </android.support.constraint.ConstraintLayout>
