rev02 - przegladanie wszystkich kursow, wyszukiwanie poczatek

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -8,11 +8,13 @@
     tools:context="com.example.mniez.myapplication.MainActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/mAppBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
+            android:elevation="6dp"
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -20,6 +22,8 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
