--- a/app/src/main/res/layout/content_course.xml
+++ b/app/src/main/res/layout/content_course.xml
@@ -12,7 +12,8 @@
         android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/tab_layout"/>
+        android:layout_below="@+id/tab_layout"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 
     <android.support.design.widget.TabLayout
@@ -21,11 +22,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
         android:background="@color/colorAccent2"
-        app:tabTextColor="@color/colorPrimary"
-        app:tabSelectedTextColor="@color/colorAccent"
-        app:tabIndicatorColor="@color/colorAccent"
+        app:tabTextColor="@color/colorAccent"
+        app:tabSelectedTextColor="@color/colorPrimary"
+        app:tabIndicatorColor="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:layout_gravity="top"/>
+        android:layout_gravity="top"
+        />
 
 </RelativeLayout>
