--- a/app/src/main/res/layout/course_elements_item.xml
+++ b/app/src/main/res/layout/course_elements_item.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+   >
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView2"
@@ -12,7 +13,8 @@
         android:visibility="visible"
         app:cardBackgroundColor="@color/cardview_light_background"
         app:cardElevation="2dp"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        android:animateLayoutChanges="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -90,7 +92,7 @@
                 android:text="/"
                 android:textSize="12dp" />
 
-            <Button
+            <ImageView
                 android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -99,10 +101,19 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="15dp"
+                android:layout_marginTop="10dp"
                 android:background="#00ffffff"
-                android:text="Wejdź"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
-                android:textColor="@color/colorAccent" />
+                android:elevation="0dp"
+                app:srcCompat="@drawable/ic_menu_send" />
+
+            <com.example.mniez.myapplication.ActivityAdapter.LessonElementsListView
+                android:id="@+id/listView1"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fastScrollEnabled="false"/>
+
 
         </RelativeLayout>
 
