--- a/app/src/main/res/layout/courses_list_item.xml
+++ b/app/src/main/res/layout/courses_list_item.xml
@@ -23,6 +23,7 @@
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="match_parent"
+                android:transitionName="courseImage"
                 android:layout_height="100dp"
                 app:srcCompat="@android:color/darker_gray"
                 android:adjustViewBounds="true"
@@ -35,6 +36,7 @@
                 android:layout_alignBottom="@+id/imageView2"
                 android:layout_alignParentEnd="true"
                 android:background="#55000000"
+                android:transitionName="courseName"
                 android:fontFamily="serif"
                 android:text="TextView"
                 android:textAlignment="center"
