--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#74c219</color>
-    <color name="colorPrimaryDark">#33691e</color>
-    <color name="colorAccent2">#795548</color>
-    <color name="colorAccent">#ffa000</color>
+    <color name="colorPrimary">#2bcc81</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent2">#000000</color>
+    <color name="colorAccent">#7b7b7b</color>
+    <color name="lightGray">#e9e8e8</color>
 </resources>
