rev04 - rozpoczęcie pracy nad rozwiązywaniem testów

--- a/app/src/main/res/layout/content_course.xml
+++ b/app/src/main/res/layout/content_course.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.mniez.myapplication.CourseBrowseActivity"
+    tools:context="com.example.mniez.myapplication.StudentModule.CourseBrowseActivity"
     tools:showIn="@layout/activity_course">
 
     <android.support.v4.view.ViewPager
