--- a/app/src/main/res/layout/content_course_elements.xml
+++ b/app/src/main/res/layout/content_course_elements.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.mniez.myapplication.CourseElementsActivity"
+    tools:context="com.example.mniez.myapplication.StudentModule.CourseElementsActivity"
     tools:showIn="@layout/activity_course_elements"
     android:animateLayoutChanges="true">
     <ProgressBar
