--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.mniez.myapplication.MainActivity">
+    tools:context="com.example.mniez.myapplication.StudentModule.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/mAppBarLayout"
