rev05 - ciąg dalszy pracy nad rozwiązywaniem testów

--- a/app/src/main/res/layout/answers_fragment.xml
+++ b/app/src/main/res/layout/answers_fragment.xml
@@ -2,12 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightGray">
+    android:background="@color/lightGray"
+    android:gravity="center">
 
-    <GridView
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:numColumns="2"
-        android:stretchMode="spacingWidthUniform"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RadioButton
+                android:id="@+id/answerOne"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Odpowiedź 1"
+                android:textAlignment="center" />
+
+            <RadioButton
+                android:id="@+id/answerTwo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Odpowiedź 2"
+                android:textAlignment="center" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RadioButton
+                android:id="@+id/answerThree"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Odpowiedź 3"
+                android:textAlignment="center" />
+
+            <RadioButton
+                android:id="@+id/answerFour"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Odpowiedź 4"
+                android:textAlignment="center" />
+        </TableRow>
+
+    </TableLayout>
+
 </LinearLayout>
