--- a/app/src/main/res/layout/progress_fragment.xml
+++ b/app/src/main/res/layout/progress_fragment.xml
@@ -10,5 +10,5 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        />
+        android:progressTint="@color/colorPrimary" />
 </LinearLayout>
