--- a/app/src/main/res/layout/activity_course_elements.xml
+++ b/app/src/main/res/layout/activity_course_elements.xml
@@ -44,5 +44,13 @@
 
     <include layout="@layout/content_course_elements" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="bottom|end"
+        app:srcCompat="@android:drawable/arrow_up_float" />
 
 </android.support.design.widget.CoordinatorLayout>
