--- a/app/src/main/res/layout/activity_exam.xml
+++ b/app/src/main/res/layout/activity_exam.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.mniez.myapplication.StudentModule.TestExamActivity"
+    tools:context="com.example.mniez.myapplication.StudentModule.ExamActivity"
     android:weightSum="10">
 
     <FrameLayout
