--- a/app/src/main/res/layout/answers_fragment.xml
+++ b/app/src/main/res/layout/answers_fragment.xml
@@ -17,6 +17,7 @@
 
             <Button
                 android:id="@+id/answerOne"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -25,6 +26,7 @@
 
             <Button
                 android:id="@+id/answerTwo"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -39,6 +41,7 @@
 
             <Button
                 android:id="@+id/answerThree"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -47,6 +50,7 @@
 
             <Button
                 android:id="@+id/answerFour"
+                style="@style/Widget.AppCompat.Button.Colored"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -55,5 +59,4 @@
         </TableRow>
 
     </TableLayout>
-
 </LinearLayout>
