--- a/app/src/main/res/layout/number_fragment.xml
+++ b/app/src/main/res/layout/number_fragment.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lightGray"
     android:gravity="center">
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardViewAnswer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardElevation="2dp"
+        app:cardUseCompatPadding="true">
 
     <TextView
         android:id="@+id/questionNumber"
@@ -14,4 +24,6 @@
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold" />
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
