--- a/app/src/main/res/layout/progress_fragment.xml
+++ b/app/src/main/res/layout/progress_fragment.xml
@@ -2,13 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:background="@color/lightGray">
+    android:background="@color/lightGray"
+    android:gravity="center">
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardViewAnswer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardElevation="2dp"
+        app:cardUseCompatPadding="true"
+        android:gravity="center">
 
     <ProgressBar
         android:id="@+id/testProgressBar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-        android:progressTint="@color/colorPrimary" />
+        android:progressTint="@color/colorPrimary"
+        android:layout_gravity="center"/>
+
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
