--- a/app/src/main/res/layout/course_elements_item.xml
+++ b/app/src/main/res/layout/course_elements_item.xml
@@ -37,7 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/lessonName"
-                android:fontFamily="sans-serif"
+                android:fontFamily="sans-serif-condensed"
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textAllCaps="true"
