--- a/app/src/main/res/layout/grade_courses_item.xml
+++ b/app/src/main/res/layout/grade_courses_item.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/gradeCardView"
+        android:id="@+id/cardView1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardElevation="7dp">
+        android:visibility="visible"
+        app:cardBackgroundColor="@color/cardview_light_background">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -17,27 +18,19 @@
             android:padding="3dp">
 
             <TextView
-                android:id="@+id/gradeText"
-                android:layout_width="wrap_content"
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:background="@color/cardview_dark_background"
                 android:fontFamily="sans-serif-condensed"
                 android:text="TextView"
-                android:textAllCaps="true"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/gradeResult"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:fontFamily="sans-serif-condensed"
-                android:text="TextView"
-                android:textAlignment="textEnd"
-                android:textAllCaps="false"
-                android:textSize="14sp" />
-
-
+                android:textAlignment="center"
+                android:textColor="@color/cardview_light_background"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:transitionName="courseName" />
 
         </RelativeLayout>
 
