--- a/app/src/main/res/layout/grade_elements_item.xml
+++ b/app/src/main/res/layout/grade_elements_item.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/gradeCardView"
+        android:id="@+id/cardView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardElevation="7dp">
+        android:animateLayoutChanges="true"
+        android:visibility="visible"
+        app:cardBackgroundColor="@color/cardview_light_background"
+        app:cardElevation="0dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -17,26 +20,17 @@
             android:padding="3dp">
 
             <TextView
-                android:id="@+id/gradeText"
-                android:layout_width="wrap_content"
+                android:id="@+id/lessonName"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
                 android:fontFamily="sans-serif-condensed"
                 android:text="TextView"
-                android:textAllCaps="true"
-                android:textSize="14sp"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimary"
+                android:textSize="18sp"
                 android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/gradeResult"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:fontFamily="sans-serif-condensed"
-                android:text="TextView"
-                android:textAlignment="textEnd"
-                android:textAllCaps="false"
-                android:textSize="14sp" />
-
 
 
         </RelativeLayout>
