--- a/app/src/main/res/layout/content_info.xml
+++ b/app/src/main/res/layout/content_info.xml
@@ -46,7 +46,7 @@
         android:id="@+id/textView21"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Autorzy: Marcin Niezbecki, Dawid Suryś, Marek Szmit"
+        android:text="Autorzy projektu: Marcin Niezbecki, Dawid Suryś, Marek Szmit"
         android:textAlignment="center"
         android:layout_marginTop="15dp"/>
 
