--- a/app/src/main/res/layout/exam_grades_item.xml
+++ b/app/src/main/res/layout/exam_grades_item.xml
@@ -16,12 +16,19 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical">
 
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                app:srcCompat="@color/cardview_dark_background" />
+
             <TextView
                 android:id="@+id/examStudentName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:fontFamily="sans-serif-condensed"
+                android:layout_toRightOf="@id/imageView5"
                 android:text="TextView"
                 android:textSize="20sp" />
 
@@ -32,6 +39,7 @@
                 android:layout_below="@id/examStudentName"
                 android:layout_marginLeft="5dp"
                 android:fontFamily="sans-serif-condensed"
+                android:layout_toRightOf="@id/imageView5"
                 android:text="TextView"
                 android:textAlignment="textEnd"
                 android:textColor="@color/colorPrimary"
