--- a/app/src/main/res/layout/users_item.xml
+++ b/app/src/main/res/layout/users_item.xml
@@ -7,7 +7,7 @@
     android:layout_margin="10dp">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardView3"
+        android:id="@+id/cardView5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="visible"
@@ -21,36 +21,25 @@
         android:gravity="center_vertical">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/usersAvatar"
             android:layout_width="120dp"
             android:layout_height="80dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop" />
 
         <TextView
-            android:id="@+id/allCoursesName"
+            android:id="@+id/usersName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/imageView3"
-            android:fontFamily="sans-serif"
+            android:layout_marginTop="15dp"
+            android:layout_toRightOf="@+id/usersAvatar"
+            android:fontFamily="sans-serif-condensed"
             android:text="TextView"
+            android:textAlignment="textStart"
             android:textSize="14sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/allCoursesDescript"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/allCoursesName"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/imageView3"
-            android:fontFamily="sans-serif"
-            android:text="TextView"
-            android:textAlignment="textStart"
-            android:textAllCaps="true"
-            android:textSize="10dp" />
 
     </RelativeLayout>
 
