--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#26ac6e</color>
+    <color name="colorPrimary">#00c861</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent2">#000000</color>
     <color name="colorAccent">#7b7b7b</color>
