--- a/app/src/main/res/layout/content_course_elements.xml
+++ b/app/src/main/res/layout/content_course_elements.xml
@@ -2,12 +2,44 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/course_elements_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="fill_parent"
+    android:animateLayoutChanges="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.mniez.myapplication.StudentModule.CourseElementsActivity"
-    tools:showIn="@layout/activity_course_elements"
-    android:animateLayoutChanges="true">
+    tools:showIn="@layout/activity_course_elements">
+
+    <LinearLayout
+        android:id="@+id/no_elements_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="225dp"
+            android:layout_height="243dp"
+            app:srcCompat="@drawable/sad_dummy" />
+
+        <TextView
+            android:id="@+id/textView26"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:text="Nie znaleziono elementów"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
     <ProgressBar
         android:id="@+id/login_progress_course"
         style="?android:attr/progressBarStyleLarge"
